--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,16 @@
         </header>
         <section>
             <h2 id="todo-list-placeholder">Loading...</h2>
-            <ul id="todo-list"></ul>
+            <br>
+            <div id="button-list"></div>
             <form id="todo-form">
                 <input id="new-todo" placeholder="What needs to be done?" autofocus>
                 <input id="submit-todo" type="submit" value="Create">
+                
             </form>
+            <div id="count-label" class="counter"></div>
+            <ul id="todo-list"></ul>
+
             <div id="error"></div>
         </section>
         <script type="text/javascript" src="main.js"></script>
