CSS added to make elements look better 2

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <section>
             <h2 id="todo-list-placeholder">Loading...</h2>
             <br>
-            <div id="button-list"></div>
+            <div id="button-list" class="buttonList"></div>
             <form id="todo-form">
                 <input id="new-todo" placeholder="What needs to be done?" autofocus>
                 <input id="submit-todo" type="submit" value="Create">
