Added favourite option

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,9 @@
             <h2 id="todo-list-placeholder">Loading...</h2>
             <br>
             <div id="button-list" class="buttonList"></div>
-            <form id="todo-form">
+            <form id="todo-form" class="submitForm">
                 <input id="new-todo" placeholder="What needs to be done?" autofocus>
-                <input id="submit-todo" type="submit" value="Create">
-                
+                <button id="submit-todo">+</button>
             </form>
             <div id="count-label" class="counter"></div>
             <ul id="todo-list"></ul>
