added date/time to insertions,  deelte complete gets transparent when there are no completed tasks - this replaced the button disappearing

--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,21 @@
     </head>
     <body>
         <header>
-            <h1>TODO List</h1>
+            <h1>TODO</h1>
         </header>
         <section>
             <h2 id="todo-list-placeholder">Loading...</h2>
             <br>
+            <center>
             <div id="button-list" class="buttonList"></div>
             <form id="todo-form" class="submitForm">
                 <input id="new-todo" placeholder="What needs to be done?" autofocus>
                 <button id="submit-todo">+</button>
             </form>
             <div id="count-label" class="counter"></div>
+            </center>
             <ul id="todo-list"></ul>
-
+            
             <div id="error"></div>
         </section>
         <script type="text/javascript" src="main.js"></script>
