--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,6 @@
             <div id="error"></div>
         </section>
         <script type="text/javascript" src="main.js"></script>
+        <script type="text/javascript" src="actions.js"></script>
     </body>
 </html>
